# demo-school

./: README.md  README.md.pub
backend/: .dockerignore  .env  .env.example  Dockerfile  README.md  alembic.ini  celery_worker.py  check_user.py  docker-compose.yml  flower_config.py  main.py  pyproject.toml  school_erp.db  seed_db.py  test_login.py
backend/.hypothesis/constants/: 05c24424210508d3  095fb3c5ad286b3a  0bd8c6bbd88f1405  11994a927e3e146f  1936dcf105ba7c4e  1a4e373c1a353db4  1ad78c85cd5d253f  1b0e5e10bd846daa  1eea3276a1f86605  2313a07894c22b1f  23c189046fff5456  251f1ebfa387b907  256021bdddd66bad  25b268c968830be0  2a765467c096c752  318ba37333c1fb00  32ee75d4bb3044e5  361088ae8b7813ee  37a35f77f7cd1d45  3f749cde9e15a94d  3fce7e9acf29767c  4ab1b9d21a341cc7  4c8ab6208cd19798  4d546b22074bc767  4e92a6cab261724a  4fdf5d486c6e37b3  519d988ee95f6ef9  58da77589ba4529a  595fd25c267354ab  5b0c235cc36fcdc2  649fe4e8ff36291a  669e59d394f79da6  685cc066c0ac2e69  6f7e9e6ac0a70da2  7231d822fd875fa1  78a1649d6038d080  7afd50e1459db448  7bbdcf8654a01114  7e30581d46906240  80250cd864e1c1a8  (+26 more)
backend/.hypothesis/tmp/: tmp07vr_h8b  tmp0_u3flvu  tmp0tkqzb7z  tmp18j72_pp  tmp1sbwfxrh  tmp3w7cajug  tmp3x5kk2x5  tmp40w6amit  tmp480a01cw  tmp5v_129q_  tmp7l20_bx4  tmp94p9txtv  tmpa_8vkezv  tmpad6u5xzo  tmpagwzo7co  tmpamovlyyv  tmpcdikvilj  tmpcdp8ul2h  tmpd_u0gpm4  tmpfn3v8ccd  tmpi1kwc8y4  tmpi60pvwei  tmpikeczvuc  tmpjrm2zpyw  tmpjt0v_ptl  tmpjzhxujmf  tmpps7y14s_  tmpqjto_js0  tmpsj8vm069  tmpsww6urku  tmpszzyx3j_  tmpu62fztqf  tmpvojalinq  tmpwjbtcknp  tmpx08sk6hn  tmpxnguj3jj  tmpxxynga_d  tmpzml2fq5u  tmpzoz3cka_
backend/alembic/: env.py
backend/alembic/versions/: add_audit_logs_002.py  initial_001_schema.py
backend/app/: __init__.py  celery_app.py  config.py
backend/app/api/: __init__.py  analytics.py  announcements.py  attendance.py  auth.py  classes.py  deps.py  exams.py  fees.py  grades.py  leave_requests.py  reports.py  sections.py  students.py  teachers.py  tenants.py  timetable.py
backend/app/middleware/: __init__.py  audit.py  csrf.py  rate_limit.py  sanitization.py  tenant.py
backend/tests/: __init__.py
(+979 files in other folders)
